pycopy/tomcatingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcatingress
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: tomcat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tomcatservice
                port:
                  number: 10080
